--- a/hello/templates/App02/过滤器.html
+++ b/hello/templates/App02/过滤器.html
@@ -1,3 +1,4 @@
+{% load mytag %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,5 +7,6 @@
 </head>
 <body>
 {{ num|add:'10' }}
+{{ 5|sub1 }}
 </body>
 </html>
